--- a/DesignSystems/package.json
+++ b/DesignSystems/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@tailwindcss/forms": "0.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -26,6 +27,7 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "@tailwindcss/aspect-ratio": "^0.4.2"
   }
 }
